appId: com.erichsen.footballcoach
tags:
  - smoke
---
- launchApp:
    appId: com.erichsen.footballcoach
- runFlow: _dev_client_bootstrap.yaml
- runFlow:
    when:
      visible:
        id: '^notifications\.enableButton$'
    commands:
      - tapOn:
          id: '^notifications\.enableButton$'
- openLink: "footballcoach:///(tabs)/profile"
- extendedWaitUntil:
    visible:
      id: '^auth\.login\.emailInput$'
    timeout: 120000
- runFlow:
    commands:
      - tapOn:
          id: '^auth\.login\.emailInput$'
      - inputText: "${MAESTRO_EMAIL}"
      - tapOn:
          id: '^auth\.login\.passwordInput$'
      - inputText: "${MAESTRO_PASSWORD}"
      - tapOn:
          id: '^auth\.login\.submitButton$'
- runFlow:
    when:
      visible: 'Succes!'
    commands:
      - extendedWaitUntil:
          visible: 'Succes!'
          timeout: 20000
      - runFlow:
          when:
            visible: '^OK$'
          commands:
            - tapOn: '^OK$'
      - runFlow:
          when:
            visible: '^Ok$'
          commands:
            - tapOn: '^Ok$'
- openLink: "footballcoach:///(tabs)/(home)"
- extendedWaitUntil:
    visible:
      id: '^home\.screen$'
    timeout: 120000
- assertVisible:
    id: '^home\.screen$'
